Added forgot password and reset password